<resources>
    <string name="app_name">FA19_BSE_220_Assignment_2</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="back">back</string>
    <string name="open">open</string>
    <string name="hint">Enter The Passcode</string>
    <string name="home">Welcome toyour safe</string>
    <string name="clear">clear</string>
</resources>