<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:baselineAligned="false"
        android:orientation="vertical">

        <TextView
            android:maxLength="4"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:hint="Enter Your Password"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button

            android:id="@+id/buttonOne"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button"
            android:text="@string/one"
            android:textSize="30dp" />

        <Button

            android:id="@+id/buttonTwo"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button"
            android:text="@string/two"
            android:textSize="30dp" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:background="@drawable/round_button"
            android:text="@string/three"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Second"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button"
            android:text="@string/four"
            android:textSize="30dp" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button"
            android:text="@string/five"
            android:textSize="30dp" />

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:background="@drawable/round_button"
            android:text="@string/six"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button"
            android:text="@string/seven"
            android:textSize="30dp" />

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_button"
            android:text="@string/eight"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:background="@drawable/round_button"
            android:text="@string/nine"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="120dp"
        android:id="@+id/fourth"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonClean"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_button"
            android:text="@string/clear"
            android:textSize="11sp" />

        <Button
            android:id="@+id/buttonZero"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_button"
            android:text="@string/zero"
            android:textSize="30dp" />

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="77dp"
            android:layout_height="74dp"
            android:background="@drawable/round_button"
            android:text="@string/open"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>